Fixed elements and font size on small resolutions

--- a/src/app/home/about-me-section/about-me-section.component.scss
+++ b/src/app/home/about-me-section/about-me-section.component.scss
@@ -18,8 +18,8 @@
 
       .photo-img {
         margin: 0 auto;
-        width: 200px;
-        height: 200px;
+        width: 180px;
+        height: 180px;
 
         border-radius: 100%;
         background: url("../../../assets/img/photo.png") center no-repeat;
@@ -31,22 +31,24 @@
       width: 100%;
 
       .header-container {
+        margin-top: 30px;
+
         h2 {
-          font-size: 24px;
+          font-size: 18px;
           text-align: center;
         }
 
         .header-line {
           display: block;
           width: 10%;
-          height: 8px;
+          height: 5px;
           margin: 0 auto;
           background: $pw-secondary-dark;
         }
       }
 
       .text {
-        font-size: 18px;
+        font-size: 16px;
         text-align: center;
       }
     }
@@ -59,6 +61,24 @@
         .photo-img {
           width: 340px;
           height: 340px;
+        }
+      }
+
+      .about-me-text-container {
+        .header-container {
+          margin-top: 0;
+
+          h2 {
+            font-size: 24px;
+          }
+
+          .header-line {
+            height: 8px;
+          }
+        }
+
+        .text {
+          font-size: 18px;
         }
       }
     }
