--- a/src/app/home/technologies-section/technology-item/technology-item.component.scss
+++ b/src/app/home/technologies-section/technology-item/technology-item.component.scss
@@ -4,15 +4,15 @@
 .technology-item {
   margin: 0;
   padding: 30px 10px;
-  width: 150px;
+  width: 100px;
   display: flex;
   flex-flow: wrap;
   justify-content: center;
 
   .icon-container {
     pointer-events: none;
-    width: 100px;
-    height: 100px;
+    width: 75px;
+    height: 75px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -22,8 +22,8 @@
     margin-bottom: 30px;
 
     img {
-      width: 64px;
-      height: 64px;
+      width: 42px;
+      height: 42px;
     }
   }
 
@@ -31,10 +31,25 @@
     text-align: center;
     font-weight: bold;
     width: 100%;
-    font-size: 20px;
+    font-size: 16px;
   }
 
   @include breakpoint($sm) {
+    width: 150px;
     padding: 30px 16px;
+
+    .icon-container {
+      width: 100px;
+      height: 100px;
+
+      img {
+        width: 64px;
+        height: 64px;
+      }
+    }
+
+    .technology-name {
+      font-size: 20px;
+    }
   }
 }
